--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 /* HEADER */
 
-.header-logo {
+.navbar-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   letter-spacing: 0.03em;
