--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
   box-sizing: border-box;
   transition: 0.1s linear;
   font-family: var(--font-primary);
-  letter-spacing: 0.02em;
 }
 *img {
   max-width: 100%;
@@ -23,14 +22,16 @@ a {
 ul {
   margin: 0;
   padding: 0;
-  list-style: none;
-}
-li {
-  text-decoration: none;
 }
 body {
   background-color: #fff;
   color: var(--body-text);
+}
+.list {
+  list-style: none;
+}
+.link {
+  text-decoration: none;
 }
 /* HEADER */
 
@@ -41,27 +42,35 @@ body {
   font-size: 18px;
   line-height: 1.17;
   text-transform: uppercase;
+  color: var(--color-main);
+}
+.navbar-span {
   color: var(--color-button);
 }
 
-.navbar {
+.navbar-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-main);
 }
-.navbar a:hover {
+.navbar-link:hover {
   color: var(--color-button);
   border-bottom: solid var(--color-button);
 }
-.header-contact-item {
+.contact {
   font-style: normal;
+}
+.contact-item-link {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--body-text);
 }
-.header-contact-item:focus,
-.header-contact-item:hover {
+.contact-item-link:focus,
+.contact-item-link:hover {
   color: #404bbf;
 }
 
