--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,14 @@ body {
   list-style: none;
 }
 .menu-title {
-  font-size: 16px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--color-main);
+}
+.menu-desc {
+  font-style: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--body-text);
